# cline-sdlc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ritebook.toml
.github/workflows/: ci-cd.yaml
docs/ideas/: cline-sdlc-orchestrator.md
docs/specs/: cline-sdlc-orchestrator-spec.md
src/cline_sdlc/: __init__.py
src/cline_sdlc/bootstrap/: __init__.py
src/cline_sdlc/features/: __init__.py
src/cline_sdlc/shared_kernel/: __init__.py
tests/: __init__.py
tests/integration/: __init__.py
tests/integration/features/: __init__.py
tests/unit/: __init__.py  test_package.py
tests/unit/features/: __init__.py
